fixed anime card overflow for iOS

--- a/src/components/CardMini.module.scss
+++ b/src/components/CardMini.module.scss
@@ -14,6 +14,8 @@
 
     overflow: hidden;
 
+    z-index: 1;
+
     transition: all 250ms ease-out;
 
     @include focusState($nia-pink);
